added more persian translation lines

--- a/westward_the_course_of_empire_fa.po
+++ b/westward_the_course_of_empire_fa.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-10-16 21:41+0430\n"
-"PO-Revision-Date: 2013-10-16 23:02+0430\n"
+"PO-Revision-Date: 2013-10-17 10:12+0430\n"
 "Last-Translator: bijan <bijanebrahimi@riseup.net>\n"
 "Language-Team: bijanebrahimi, persian translation\n"
 "Language: fa\n"
@@ -41,7 +41,7 @@ msgstr ""
 
 msgid "Surely not in the way that Chelsea Manning invited herself to 35 years in Fort Leavenworth."
 msgstr ""
-"و صد البته نه به شکلی که «چلسی منینگ» خودش رابرای ۳۵ سال زندانی شدن به زندان "
+"و صد البته نه به شکلی که «چلسی منینگ» خودش رابرای ۳۵ سال زندانی شدن زندان "
 "«لیون ورث» دعوت کرده است."
 
 msgid "No, law professor-like I have assigned myself no onerous duties."
@@ -148,12 +148,23 @@ msgstr ""
 
 msgid "This was all the more obviously crucial in the development of the power to rule the world when, a mere twenty years later, the empire of the United States was locked in a confrontation of nuclear annihilation with the Soviet empire—a war of submarines hidden in the dark below the continents, capable of eradicating human civilization in less than an hour in an imperial confrontation whose rule of engagement was \"launch on warning.\" Thus it was that the Empire of the United States came to have precisely the same view of the effort to render everywhere pervious to American power that had been the view of Emperor Augustus."
 msgstr ""
+"این مورد به وضوح در توسعه قدرت برای حکمرانی به دنیا از همه حیاتی تر بود "
+"مخصوصا زمانی که،‌مدتی حدود بیست سال پیش، امپراتوری ایالات متحده در مواجهه با "
+"نابودی هسته‌ای با امپراتوری شوروی گرفتار شده بود. جنگ زیردریایی های مخفی در "
+"اعماق تاریک زیر قاره‌هاکه قادر بودند تمدن بشری را در کمتر از یک ساعت در "
+"مقابلهٔ اپراتوری‌هایی که قوانین وارد شدنشان به جنگ، «حمله در صورت احتمال "
+"خطر» بود نابود کنند. پس بدینگونه بود که امپراتوری ایالات متحده، دقیقا همان "
+"دیدی را برای تلاش به تسلیم کردن هر جایی به قدرت برتر آمریکا را داشته باشد که "
+"دید امپراتور «آگوستوس» نیز بود."
 
 msgid "And our listeners aspired to everything."
-msgstr ""
+msgstr "و بدینگونه کسانی که استراق سمع می‌کردند به همه چیز مشتاق شدند."
 
 msgid "Now, the structure of listening which came out of the Second World War—the spying on signals, the stealing of signals and the breaking of codes—this was, under everybody's understanding of the new order of power in the world, the crucial center of it all."
 msgstr ""
+"حال، ساختار شنودی که میراث جنگ جهانی دوم، مانند جاسوسی بر روی سیگنال‌های "
+"دشمن یا دزدی سیگنال و شکستن کد آن، بود همه تحت درک همگانی از مرتبهٔ جدیدی از "
+"قدرت در جهان که مرکز حیاتی همه چیز بود می‌شد."
 
 msgid "And, while it has been commonplace to recognize since the end of the Cold War that the United States has spent for decades as much on its military might as all other powers in the world combined, it has not necessarily followed in people's consciousness that we applied to the stealing of signals and the breaking of codes a similar proportion of our diligence."
 msgstr ""
